text revision and further analysis of task44

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -63,6 +63,17 @@
 }
 
 % --- Task 44 references ---
+
+@article{onnela2005intensity,
+  title = {Intensity and coherence of motifs in weighted complex networks},
+  author = {Onnela, J.-P. and Saram{\"a}ki, J. and Kert{\'e}sz, J. and Kaski, K.},
+  journal = {Physical Review E},
+  volume = {71},
+  pages = {065103},
+  year = {2005},
+  doi = {10.1103/PhysRevE.71.065103}
+}
+
 @misc{metaSCI,
   title        = {Social Connectedness Index},
   author       = {{AI and Data for Good at Meta}},
