--- a/latex/sections/task15.tex
+++ b/latex/sections/task15.tex
@@ -29,7 +29,7 @@ Goh et al.\ predict $\tau_A=\gamma/(\gamma-1)$ for $2<\gamma<3$ (non-mean-field)
 \paragraph{Topology comparison.}
 We run the BTW sandpile ($z_c(i)=k_i$, per-grain dissipation $f=10^{-4}$, $2\times10^5$ steps, $2\times10^4$ transient) on six synthetic topologies with $N\approx20\,000$: a 2D square lattice ($141\!\times\!141$, open boundary), an Erd\H{o}s--R\'{e}nyi (ER) random graph ($\langle k\rangle\!\approx\!4$), a Watts--Strogatz (WS) small-world network ($k\!=\!4$, rewiring $\beta\!=\!0.1$), a Barab\'{a}si--Albert (BA) preferential-attachment network ($m\!=\!2$), and two scale-free (SF) networks from the static model with $\gamma\!=\!2.5$ and $\gamma\!=\!3.0$.
 Fig.~\ref{fig:bonabeau_ccdf} (right) overlays the resulting area CCDFs.
-The lattice, ER, and WS networks produce nearly overlapping curves consistent with the mean-field $A^{-1/2}$ decay, as expected for homogeneous-degree graphs.
+The lattice and WS networks produce nearly overlapping curves consistent with the mean-field $A^{-1/2}$ decay, as expected for homogeneous-degree graphs, with a clear cutoff for lattice and a subtler one for the small-world network.
 The BA and SF networks exhibit steeper tails: degree heterogeneity increases the probability of moderate-sized events (initiated by hub topplings) while reducing the very large ones.
 Lowering $\gamma$ steepens the tail further, in qualitative agreement with the Goh et al.\ prediction of $\tau_A>\frac{3}{2}$ for $\gamma<3$.
 
