--- a/latex/sections/task15.tex
+++ b/latex/sections/task15.tex
@@ -27,18 +27,19 @@ On a quenched scale-free network generated with the static model~\cite{goh2003sa
 Goh et al.\ predict $\tau_A=\gamma/(\gamma-1)$ for $2<\gamma<3$ (non-mean-field) and $\tau_A=3/2$ for $\gamma\ge3$ (mean-field), with $\tau_A$ defined via $P(A)\sim A^{-\tau_A}$.
 
 \paragraph{Topology comparison.}
-We run the BTW sandpile ($z_c(i)=k_i$, per-grain dissipation $f=10^{-4}$, $2\times10^5$ steps, $2\times10^4$ transient) on six synthetic topologies with $N\approx20\,000$: a 2D square lattice ($141\!\times\!141$, open boundary), an Erd\H{o}s--R\'{e}nyi (ER) random graph ($\langle k\rangle\!\approx\!4$), a Watts--Strogatz (WS) small-world network ($k\!=\!4$, rewiring $\beta\!=\!0.1$), a Barab\'{a}si--Albert (BA) preferential-attachment network ($m\!=\!2$), and two scale-free (SF) networks from the static model with $\gamma\!=\!2.5$ and $\gamma\!=\!3.0$.
-Fig.~\ref{fig:bonabeau_ccdf} (right) overlays the resulting area CCDFs.
-The lattice and WS networks produce nearly overlapping curves consistent with the mean-field $A^{-1/2}$ decay, as expected for homogeneous-degree graphs, with a clear cutoff for lattice and a subtler one for the small-world network.
-The BA and SF networks exhibit steeper tails: degree heterogeneity increases the probability of moderate-sized events (initiated by hub topplings) while reducing the very large ones.
-Lowering $\gamma$ steepens the tail further, in qualitative agreement with the Goh et al.\ prediction of $\tau_A>\frac{3}{2}$ for $\gamma<3$.
-
+We run the BTW sandpile ($z_c(i)=k_i$, per-grain dissipation $f=10^{-4}$, $5\times10^5$ steps, $5\times10^4$ transient) on six synthetic topologies with $N\approx80\,000$: a 2D square lattice ($282\!\times\!282$, open boundary), an Erd\H{o}s--R\'{e}nyi (ER) random graph ($\langle k\rangle\!\approx\!4$), a Watts--Strogatz (WS) small-world network ($k\!=\!4$, rewiring $\beta\!=\!0.1$), a Barab\'{a}si--Albert (BA) preferential-attachment network ($m\!=\!2$), and two scale-free (SF) networks from the static model with $\gamma\!=\!2.5$ and $\gamma\!=\!3.0$.
+Fig.~\ref{fig:bonabeau_ccdf} (right) overlays the resulting avalanche-size CCDFs.
+The homogeneous topologies (lattice, ER, WS) cluster near the mean-field $S^{-1/2}$ guide, confirming that low degree variance leaves scaling unaffected.
+In contrast, the heterogeneous networks (BA, SF) should show markedly steeper tails: degree-heterogeneity concentrates load on hubs, producing more frequent moderate cascades but suppressing the very large ones.
+The SF static model with $\gamma\!=\!2.5$ matches the predicted $\tau_S=\gamma/(\gamma-1)=5/3$ exponent ($\text{CCDF}\sim S^{-2/3}$, much steeper than MF), while $\gamma\!=\!3.0$ already approaches the MF regime~\cite{goh2003sandpile}.
+While slightly different from what expected for heterogeneous topologies, we get a qualitatively consistent pattern of  for more heterogeneous networks, with a consistent pattern but not in the $S^{-2}$ regime.
+\enlargethispage*{\baselineskip}
 \begin{figure}[t]
     \centering
     \includegraphics[width=0.49\linewidth]{figures/task15/compare_ccdf_size.pdf}\hfill
     \includegraphics[width=0.49\linewidth]{figures/task15/topology_comparison_ccdf.pdf}
     \caption{Left: annealed random-neighbor model ($N=20\,000$, $k=4$) avalanche-size CCDF for three dissipation rates; dashed line marks the mean-field slope $-1/2$.
-    Right: avalanche-area CCDF on six quenched topologies ($N\!\approx\!20\,000$, degree threshold, $f\!=\!10^{-4}$); homogeneous networks cluster near the MF guide while heterogeneous ones (BA, SF) show steeper tails.}
+    Right: avalanche-size CCDF on six quenched topologies ($N\!\approx\!80\,000$, degree threshold, $f\!=\!10^{-4}$); homogeneous networks cluster near the MF guide while heterogeneous ones (BA, SF) show progressively steeper tails.}
     \label{fig:bonabeau_ccdf}
 \end{figure}
 
@@ -75,7 +76,7 @@ The competition between these two effects can produce a non-trivial optimum $p^*
     \caption{Probability of a \emph{global} large cascade ($S>C_g=2000$) versus $p$. The non-monotonic shape persists, supporting the ``optimal coupling'' interpretation rather than a cutoff artifact.}
     \label{fig:brummitt_global_compare}
 \end{figure}
-
+\enlargethispage*{\baselineskip}
 Global cascades (Fig.~\ref{fig:brummitt_global_compare}) show the same qualitative non-monotonic pattern.
 Small coupling suppresses the largest events; strong coupling enables system-wide propagation.
 For the regular-module case, the optimum lies near $p^*\approx 0.01$, consistent with~\cite{brummitt2012suppressing}.
